chore: add dotenv expand to allow url expanded

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,11 @@ HTTPS_PORT=
 SERVER_CERTIFICATE=
 SERVER_PRIVATE_KEY=
 HASH_SECRET=
+
+MAX_CHECKS=5
+
+TWILIO_ACCOUNT_SID=""
+TWILIO_AUTH_TOKEN=""
+TWILIO_FROM_NUMBER=""
+TWILIO_API_HOSTNAME="https://api.twilio.com"
+TWILIO_API_PATH="/2010-04-01/Accounts/${TWILIO_ACCOUNT_SID}/Messages.json"
