chore: add start script without nodemon

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon src/index.js",
+    "start:dev": "NODE_ENV=development nodemon src/index.js",
+    "start": "NODE_ENV=development node src/index.js",
     "prod": "NODE_ENV=production node src/index.js"
   },
   "keywords": [],
