--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start:dev": "NODE_ENV=development nodemon src/index.js",
     "start": "NODE_ENV=development node src/index.js",
-    "prod": "NODE_ENV=production node src/index.js"
+    "prod": "NODE_ENV=production node src/index.js",
+    "test": "node src/test/test.js"
   },
   "keywords": [],
   "author": "",
