fix: add missing env variables

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-HTTP_HOST=
+HOST=
 HTTP_PORT=
 HTTPS_PORT=
 SERVER_CERTIFICATE=
@@ -6,7 +6,7 @@ SERVER_PRIVATE_KEY=
 HASH_SECRET=
 
 MAX_CHECKS=5
-
+API_URL="http://${HOST}:${HTTP_PORT}"
 TWILIO_ACCOUNT_SID=""
 TWILIO_AUTH_TOKEN=""
 TWILIO_FROM_NUMBER=""
