--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start:dev": "NODE_ENV=development nodemon src/index.js",
     "start": "NODE_ENV=development node src/index.js",
+    "start:cluster": "NODE_ENV=development node src/index-cluster.js",
     "prod": "NODE_ENV=production node src/index.js",
     "test": "node src/test/unit.js",
     "test:e2e": "node src/test/e2e.js"
